Notes on choosing/optimising JRuby